# TrendRadar

./: Dockerfile  main.py  pyproject.toml  requirements.txt  start-http.sh
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-config-help.yml
.github/workflows/: crawler.yml
config/: config.yaml  frequency_words.txt
docker/: docker-compose-build.yml  docker-compose.yml  entrypoint.sh  manage.py
mcp_server/: server.py
mcp_server/services/: parser_service.py
mcp_server/tools/: analytics.py  search_tools.py  system.py
mcp_server/utils/: date_parser.py  errors.py
output/2025年11月24日/html/: 02时03分.html  03时02分.html  04时02分.html  05时02分.html  06时02分.html  07时02分.html  08时07分.html  09时30分.html  09时34分.html  10时29分.html  当日汇总.html
